# finance_agent

./: init_db.py  pyproject.toml  run.py
app/: __init__.py  config.py  database.py  dependencies.py  errors.py  idempotency.py
app/agent/: context.py  graph.py  llm.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py  meta_config.py
app/core/: context.py  lifespan.py  log.py
app/prompt/: prompt_loader.py
app/routers/: accounts.py  ask.py  collections.py  customers.py  foundation.py  loans.py  operations.py
app/scripts/: build_meta_knowledge.py  sync_meta_config.py  update_descriptions.py
app/semantic/: metadata.py  nl2sql.py
app/services/: __init__.py  legacy.py  meta_knowledge_service.py  query_service.py
conf/: meta_auto_generated.yaml  meta_config.yaml
date-agent-frontend/src/: App.vue
generate/: __init__.py  config.py  db.py  insert_support.py  main.py  progress.py
generate/layers/: __init__.py  base.py  common.py  fund_flows.py  layer1.py  layer2.py  layer3.py  layer4.py  layer5.py  layer6.py  layer7.py  layer8.py  layer9.py  seed_importer.py
seeds/1_foundation/: dim_branch.csv  dim_channel.csv  dim_currency.csv  dim_employee.csv  dim_product_category.csv  dim_risk_level.csv
seeds/2_product/: account_product.csv  loan_product.csv  loan_product_eligibility_rule.csv  loan_product_rate_tier.csv  loan_product_required_material.csv  service_product.csv  wealth_product.csv  (+1 more)
tests/: conftest.py  test_api_business_flows.py  test_api_route_coverage.py
(+28 files in other folders)
