[project]
name = "finance-data"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "pymysql>=1.1.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.0.1",
    "tzdata>=2026.2",
    "uvicorn>=0.34.0",
    "openai>=1.82.0",
    "asyncmy==0.2.11",
    "cryptography>=46.0.4",
    "elasticsearch[async]>=8,<9",
    "huggingface-hub>=0.36.0",
    "jieba>=0.42.1",
    "langchain>=1.2.7",
    "langchain-deepseek>=1.0.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=0.3.27",
    "langgraph>=1.0.7",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.16.2",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.15.17",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = ["."]
